--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table style="background-color: yellow; border= 1px solid black;" >
+	<table style="background-color: yellow; border= 1px solid rgb(0, 0, 0);" >
 		<caption>Student Details</caption>
-		<tr border= 1px solid black>
+		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
